--- a/src/index.html
+++ b/src/index.html
@@ -718,7 +718,7 @@
         height: 100%;
         width: 100%;
     }
-    .fragment{
+    .fm-fragment{
         width: 100%;
         height: 100%;
         border: none;
