--- a/src/index.html
+++ b/src/index.html
@@ -138,8 +138,8 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
-    <!-- <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend.js"></script> -->
+    <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
+    <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend.js"></script>
     <script type="text/javascript">
         let domEl;
         let name = '{{name}}';
