--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
         </div>
     </div>
     <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-    <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend.js"></script>
+    <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend-0.0.1-alpha.6"></script>
     <script type="text/javascript">
         let domEl;
         let name = '{{name}}';
@@ -262,7 +262,7 @@
                         devData.logged = true;
                         fmDevData[name] = devData;
                         localStorage.setItem('fmDevData', JSON.stringify(fmDevData));
-                        location.reload();
+                        // location.reload();
                     })
                     .catch(function(err) {
                         console.warn(err);
@@ -393,7 +393,7 @@
                 devData.logged = false;
                 fmDevData[name] = devData;
                 localStorage.setItem('fmDevData', JSON.stringify(fmDevData));
-                location.reload();
+                // location.reload();
             }
         };
 
