--- a/src/index.html
+++ b/src/index.html
@@ -139,8 +139,8 @@
             </div>
         </div>
     </div>
-    <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-    <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend-0.0.1-apha.6.js"></script>
+    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
+    <!-- <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend-0.0.1-alpha.6.js"></script> -->
     <!-- <script type="text/javascript" src="https://d15abo3q1yyhdy.cloudfront.net/fragments/fm-bridge-backend-0.0.1-beta.1.min.js"></script> -->
     <script type="text/javascript" src="script.js"></script>
 </body>
