one generic template

--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,11 @@
                 <label>Title</label>
                 <input type="text" id="input-title" name="title">
             </div>
-            <div class="config-panel-item">
+            <div class="config-panel-item config-panel-item-widget">
                 <label>User</label>
                 <textarea type="text" id="user-data" name="user-data"></textarea>
             </div>
-            <div class="config-panel-item config-panel-item-widget config-panel-item-form">
+            <div class="config-panel-item config-panel-item-widget">
                 <label class="label-title" id="label-entity">Entity</label>
                 <form class="radio-buttons">
                     <div class="form-item"><input type="radio" id="entity-2" name="entity" value="2"><label>Company</label></div>
@@ -43,14 +43,14 @@
             <div class="config-panel-item  config-panel-item-widget">
                 <label class="label-title">Columns</label>
                 <form class="radio-buttons">
-                    <div class="form-item"><input type="radio" id="columns-1" name="column" value="1"><label>1 (50%)</label></div>
+                    <div class="form-item"><input type="radio" id="columns-1" name="column" value="1" checked><label>1 (50%)</label></div>
                     <div class="form-item"><input type="radio" id="columns-2" name="column" value="2"><label>2 (100%)</label></div>
                 </form>
             </div>
             <div class="config-panel-item  config-panel-item-widget">
                 <label class="label-title">Rows</label>
                 <form class="radio-buttons">
-                    <div class="form-item"><input type="radio" id="rows-1" name="row" value="1"><label>1</label></div>
+                    <div class="form-item"><input type="radio" id="rows-1" name="row" value="1" checked><label>1</label></div>
                     <div class="form-item"><input type="radio" id="rows-2" name="row" value="2"><label>2</label></div>
                 </form>
             </div>
