--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,6 @@
                 </div>
                 <div class="config-panel-item">
                     <input type="submit"  class="button" value="Login">
-                    <!-- <button type="button" id="login" name="save" onClick="onLogin()">Login</button> -->
                 </div>
             </form>
         </div>
@@ -139,9 +138,8 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
-    <!-- <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend-0.0.1-alpha.6.js"></script> -->
-    <!-- <script type="text/javascript" src="https://d15abo3q1yyhdy.cloudfront.net/fragments/fm-bridge-backend-0.0.1-beta.1.min.js"></script> -->
+    <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend-0.0.1-beta.1.js"></script> -->
+    <script type="text/javascript" src="https://d15abo3q1yyhdy.cloudfront.net/fragments/fm-bridge-backend-0.0.1-beta.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
