--- a/src/index.html
+++ b/src/index.html
@@ -107,15 +107,14 @@
       <div class="form-camera-images-header">
         <div class="form-camera-images-header-title">IMÁGENES</div>
         <div class="form-camera-images-header-collapse" onClick="toggleImages()">
-          <</div> </div> <div class="form-camera">
-            <div class="form-camera-icon"></div>
+          << /div>
+        </div>
+        <div class="form-camera">
+          <div class="form-camera-icon"></div>
         </div>
         <div class="form-images"></div>
       </div>
       <div class="form-content" id="form-content"></div>
-    </div>
-    <div id="page" class="page">
-      <div class="page-content" id="page-content"></div>
     </div>
     <div id="loader" class="loader">
       <div class="loader-icon"></div>
@@ -164,12 +163,16 @@
         </div>
       </div>
     </div>
-    <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-    <!-- <script type="text/javascript"
+  </div>
+  <div id="page" class="page">
+    <div class="page-content" id="page-content"></div>
+  </div>
+  <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
+  <!-- <script type="text/javascript"
       src="https://d15abo3q1yyhdy.cloudfront.net/fragments/fm-bridge-backend.js"></script> -->
-    <script type="text/javascript"
-      src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend-0.0.1-beta.14.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript"
+    src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend-0.0.1-beta.16.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
