--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
         <textarea type="text" id="user-data" name="user-data"></textarea>
       </div>
       <div class="config-panel-item config-panel-item-widget">
-        <label class="label-title" id="label-entity">Entity</label>
+        <label class="label-title" id="label-entity">Entity type</label>
         <form class="radio-buttons">
           <div class="form-item">
-            <input type="radio" id="entity-2" name="entity" value="2" /><label>Company</label>
+            <input type="radio" id="entity-2" name="entityType" value="2" /><label>Company</label>
           </div>
           <div class="form-item">
-            <input type="radio" id="entity-1" name="entity" value="1" /><label>Opportunity</label>
+            <input type="radio" id="entity-1" name="entityType" value="1" /><label>Opportunity</label>
           </div>
         </form>
       </div>
