--- a/src/index.html
+++ b/src/index.html
@@ -114,8 +114,8 @@
         </div>
         <div class="form-images"></div>
       </div>
-      <div class="form-content" id="form-content"></div>
     </div>
+    <div class="form-content" id="form-content"></div>
     <div id="loader" class="loader">
       <div class="loader-icon"></div>
     </div>
@@ -168,8 +168,7 @@
     <div class="page-content" id="page-content"></div>
   </div>
   <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-  <!-- <script type="text/javascript"
-      src="https://d15abo3q1yyhdy.cloudfront.net/fragments/fm-bridge-backend.js"></script> -->
+  <!-- <script type="text/javascript" src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend.js"></script> -->
   <script type="text/javascript"
     src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend-0.0.1-beta.17.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
