--- a/src/index.html
+++ b/src/index.html
@@ -167,10 +167,8 @@
   <div id="page" class="page">
     <div class="page-content" id="page-content"></div>
   </div>
-  <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-  <!-- <script type="text/javascript" src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend.js"></script> -->
   <script type="text/javascript"
-    src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend-0.0.1-beta.18.min.js"></script>
+    src="https://d2ge53r08e79iy.cloudfront.net/bridge/fm-bridge-backend-0.0.1-beta.19.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 
