--- a/src/index.html
+++ b/src/index.html
@@ -171,8 +171,9 @@
   <div id="page" class="page">
     <div class="page-content" id="page-content"></div>
   </div>
-  <script type="text/javascript"
-    src="https://d2ge53r08e79iy.cloudfront.net/bridge/fm-bridge-backend-0.0.1-beta.24.min.js"></script>
+  <!-- <script type="text/javascript"
+    src="https://d2ge53r08e79iy.cloudfront.net/bridge/fm-bridge-backend-0.0.1-beta.25.min.js"></script> -->
+  <script type="text/javascript" src=" https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 
