--- a/src/index.html
+++ b/src/index.html
@@ -107,11 +107,19 @@
     <div class="form-header">
       <div id="form-title" class="form-title">Creación formulario</div>
     </div>
+    <div class="form-template" id="form-template">
+      <form id="template" method="post">
+        <label class="form-template__label">Seleccionar form:</label>
+        <select class="form-template__selector" name="templates" id="templates" form="form-template" onChange="setTemplate()">
+          <option value='0'>Selecciona uno</option>
+        </select>
+      </form>
+    </div>
     <div id="form-camera-images" class="form-camera-images">
       <div class="form-camera-images-header">
         <div class="form-camera-images-header-title">IMÁGENES</div>
         <div class="form-camera-images-header-collapse" onClick="toggleImages()">
-          << /div>
+          </div>
         </div>
         <div class="form-camera">
           <div class="form-camera-icon"></div>
@@ -171,7 +179,8 @@
   <div id="page" class="page">
     <div class="page-content" id="page-content"></div>
   </div>
-  <script type="text/javascript" src=" https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend.js"></script>
+  <script type="text/javascript"
+    src="https://fmfragments.s3.amazonaws.com/bridge/fm-bridge-backend.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 
